--- a/AutoService/AutoServiceProject.csproj
+++ b/AutoService/AutoServiceProject.csproj
@@ -68,6 +68,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="AdminZone\PageAdminMenu.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AdminZone\PageServicesAdm.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ClientZone\PageServices.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -79,10 +87,17 @@
     <Compile Include="AdminZone\AdminWindow.xaml.cs">
       <DependentUpon>AdminWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="AdminZone\PageAdminMenu.xaml.cs">
+      <DependentUpon>PageAdminMenu.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AdminZone\PageServicesAdm.xaml.cs">
+      <DependentUpon>PageServicesAdm.xaml</DependentUpon>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ClassHelper\GetInformationServiceClassHelper.cs" />
     <Compile Include="ClientZone\PageServices.xaml.cs">
       <DependentUpon>PageServices.xaml</DependentUpon>
     </Compile>
@@ -197,23 +212,23 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
-    <Resource Include="Resorces\ServicesImage\diz.jpg" />
-    <Resource Include="Resorces\ServicesImage\rulevoe-upravlenie-avtomobilya.jpg" />
-    <Resource Include="Resorces\ServicesImage\transmission.jpg" />
-    <Resource Include="Resorces\ServicesImage\АКПП.jpg" />
-    <Resource Include="Resorces\ServicesImage\Вариатор.jpg" />
-    <Resource Include="Resorces\ServicesImage\Выхлопная система.jpg" />
-    <Resource Include="Resorces\ServicesImage\ГУР.png" />
-    <Resource Include="Resorces\ServicesImage\Двигатель.png" />
-    <Resource Include="Resorces\ServicesImage\Дополнительные услуги.png" />
-    <Resource Include="Resorces\ServicesImage\Кондиционер.jpg" />
-    <Resource Include="Resorces\ServicesImage\КПП.png" />
-    <Resource Include="Resorces\ServicesImage\Подвеска.png" />
-    <Resource Include="Resorces\ServicesImage\Сцепление.jpg" />
-    <Resource Include="Resorces\ServicesImage\Техническое обслуживание.png" />
-    <Resource Include="Resorces\ServicesImage\Топливная система.png" />
-    <Resource Include="Resorces\ServicesImage\Шиномонтаж.jpg" />
-    <Resource Include="Resorces\ServicesImage\Электрика.png" />
+    <Resource Include="Resorces\Услуги автосервиса\diz.jpg" />
+    <Resource Include="Resorces\Услуги автосервиса\rulevoe-upravlenie-avtomobilya.jpg" />
+    <Resource Include="Resorces\Услуги автосервиса\transmission.jpg" />
+    <Resource Include="Resorces\Услуги автосервиса\АКПП.jpg" />
+    <Resource Include="Resorces\Услуги автосервиса\Вариатор.jpg" />
+    <Resource Include="Resorces\Услуги автосервиса\Выхлопная система.jpg" />
+    <Resource Include="Resorces\Услуги автосервиса\ГУР.png" />
+    <Resource Include="Resorces\Услуги автосервиса\Двигатель.png" />
+    <Resource Include="Resorces\Услуги автосервиса\Дополнительные услуги.png" />
+    <Resource Include="Resorces\Услуги автосервиса\Кондиционер.jpg" />
+    <Resource Include="Resorces\Услуги автосервиса\КПП.png" />
+    <Resource Include="Resorces\Услуги автосервиса\Подвеска.png" />
+    <Resource Include="Resorces\Услуги автосервиса\Сцепление.jpg" />
+    <Resource Include="Resorces\Услуги автосервиса\Техническое обслуживание.png" />
+    <Resource Include="Resorces\Услуги автосервиса\Топливная система.png" />
+    <Resource Include="Resorces\Услуги автосервиса\Шиномонтаж.jpg" />
+    <Resource Include="Resorces\Услуги автосервиса\Электрика.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
